--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="best_popular_movies">Best popular movies</string>
     <string name="simple_desciption">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum at varius vel pharetra vel turpis nunc eget. Etiam sit amet nisl purus in mollis. Massa id neque aliquam vestibulum morbi. Tristique magna sit amet purus gravida quis blandit turpis cursus. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin. Mauris rhoncus aenean vel elit scelerisque mauris. Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque. Netus et malesuada fames ac turpis egestas. Semper feugiat nibh sed pulvinar proin gravida hendrerit. Tristique nulla aliquet enim tortor at auctor. Volutpat diam ut venenatis tellus in metus vulputate.</string>
     <string name="cast">Cast</string>
+    <string name="popular_this_week">Popular This Week</string>
 </resources>
