--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="rating">Rating :</string>
     <string name="_8_10">8/10</string>
     <string name="release_date">Release date:</string>
+    <string name="recommend_for_you">Recommend For You</string>
+    <string name="similar_movies">Similar Movies</string>
 </resources>
