--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="release_date">Release date:</string>
     <string name="recommend_for_you">Recommend For You</string>
     <string name="similar_movies">Similar Movies</string>
+    <string name="no_trailers_for_this_movies">No trailers for this movies</string>
 </resources>
