--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="recommend_for_you">Recommend For You</string>
     <string name="similar_movies">Similar Movies</string>
     <string name="no_trailers_for_this_movies">No trailers for this movies</string>
+    <string name="latest_movies">Latest movies</string>
+    <string name="top_rated">Top Rated</string>
 </resources>
