--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="no_trailers_for_this_movies">No trailers for this movies</string>
     <string name="latest_movies">Latest movies</string>
     <string name="top_rated">Top Rated</string>
+    <string name="now_playing_movies">Now playing movies</string>
 </resources>
