--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="latest_movies">Latest movies</string>
     <string name="top_rated">Top Rated</string>
     <string name="now_playing_movies">Now playing movies</string>
+    <string name="back_to_home">Back to home</string>
 </resources>
