--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="top_rated">Top Rated</string>
     <string name="now_playing_movies">Now playing movies</string>
     <string name="back_to_home">Back to home</string>
-    <string name="see_more">See more...</string>
+    <string name="see_more">See more…</string>
+    <string name="movieapp">MovieApp</string>
+    <string name="search_movies">Search Movies</string>
 </resources>
